# xapcppcore-dsp

./: CMakeLists.txt  README.md
include/xap/dsp/: amplify.h  common.h  error.h  io.h
resource/: en-US-female-16000.pcm  zh-female-16000.pcm
src/: amplify.cc  error.cc  io.cc
test/: CMakeLists.txt  io.unittest.cc
